fix: set dates_date_entries overflow-y hidden, and modify maxOrderNumber according to RWD max shown order

--- a/src/components/features/Calendar.css
+++ b/src/components/features/Calendar.css
@@ -59,7 +59,7 @@
   flex-wrap: wrap;
   width: 100%;
   height: 100%;
-  overflow-x: hidden;
+  overflow: hidden;
   position: relative;
 }
 
